--- a/style/style.css
+++ b/style/style.css
@@ -8,4 +8,17 @@
   main {
     flex: 1 0 auto;
   }
+
+  .sort{
+    display: flex;
+    text-align: left;
+
+  }
+
+  .card-image> img{
+
+    width: 1rem;
+    height: 2rem;
+
+  }
   
