changes to catalogue

--- a/style/style.css
+++ b/style/style.css
@@ -11,14 +11,11 @@
 
   .sort{
     display: flex;
-    text-align: left;
+    text-align: right;
 
   }
 
-  .card-image> img{
-
-    width: 1rem;
-    height: 2rem;
-
-  }
+  .material-icons {
+    color: white;
+    }
   
